<resources>
    <string name="app_name">Smart Animal</string>
    <string name="AppVersion">Smart Animal Husbandry v1.0</string>
    <string name="appicon">APPicon</string>
    <string name="sign_in">登入</string>
    <string name="sign_up">注册</string>
    <string name="help">帮助</string>
    <string name="forget_button">忘记密码</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">返回</string>
    <string name="choose_1">进入养殖环境查看</string>
    <string name="choose_2">进入养殖数据查看</string>
    <string name="look">查看</string>
    <string name="none">暂无数据</string>
</resources>